# mcp-sfd

./: .gitignore  Makefile  README.md  claude.md  pyproject.toml
docs/: plan.md
mcp_sfd/: __init__.py  api_client.py  http_client.py  normalize.py  schemas.py  server.py
mcp_sfd/tests/: test_api_client.py  test_get_active_incidents.py  test_normalize.py  test_tools.py
mcp_sfd/tools/: __init__.py  active_incidents.py  fetch_raw.py  get_active_incidents.py  has_evac_orders.py  is_fire_active.py  latest_incident.py
seattle_api/: __init__.py  api_models.py  cache.py  circuit_breaker.py  config.py  http_client.py  main.py  models.py  normalizer.py  parser.py  poller.py  requirements.txt  run_tests.py
seattle_api/routes/: __init__.py  incidents.py
seattle_api/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_cache.py  test_cache_cleanup.py  test_circuit_breaker.py  test_config.py  test_error_resilience.py  test_http_client.py  test_main.py  test_model_validation.py  test_models.py  test_normalizer.py  test_parser.py  test_poller.py  test_search_filtering.py
tests/: __init__.py  test_normalize.py  test_tools.py
tests/data/: example_payload.json
